avant modification architecture

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
-#navbar{
-	float: left;
+body{
+	font-family: 'Titillium Web', sans-serif;
 }
 
-ul.nav{
+div#navbar{
 	float: right;
 }
 
@@ -25,31 +25,4 @@ img.icon-admin-gestion{
 
 .ul-gestion-admin-type-membre p{
 	display: initial;
-}
-
-footer .row{
-	background-color: #333333;
-	height: auto;
-	color: white;
-}
-
-.header-img{
-	width: 125px;
-	height: 125px;
-	border-radius: 150px;
-	-webkit-border-radius: 150px;
-	-moz-border-radius: 150px;
-	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-}
-
-div.coordonnes{
-	margin-left: 5%;
-}
-div.info{
-	margin-top: 10%;
-}
-div.accueil{
-	margin-left: 5%;
 }
