--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -23,6 +23,15 @@ img.icon-admin-gestion{
 	max-width: 25px;
 }
 
+div.add-button a img{
+	max-width:35px;
+}
+
+div.add-button{
+
+	float: right;
+}
+
 .ul-gestion-admin-type-membre p{
 	display: initial;
 }
