--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,10 @@
 ﻿body{
 	font-family: 'Titillium Web', sans-serif;
 }
+a.accroche{
+	font-family: 'Lobster', cursive;
+	font-size: xx-large;
+}
 
 div#navbar{
 	float: right;
