--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,3 +56,30 @@ footer .row{
 	background-repeat: no-repeat; 
 	font-weight: italic;
 }
+
+table,td
+{
+ padding:15px;
+ border-collapse:collapse;
+}
+#data td
+{
+ padding:10px;
+ border-collapse:collapse;
+ position:relative;
+ font-family:Verdana, Geneva, sans-serif;
+}
+
+a
+{
+ text-decoration:none;
+ color:#00a2d1;
+ font-family:"Courier New", Courier, monospace;
+ font-weight:bold;
+ font-family:Tahoma, Geneva, sans-serif;
+}
+#footer
+{
+ text-align:center;
+ margin-top:50px;
+}
