--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,3 +81,19 @@ a
  text-align:center;
  margin-top:50px;
 }
+.error{
+	display: none;
+	margin-left: 10px;
+}		
+
+.error_show{
+	color: red;
+	margin-left: 10px;
+}
+input.invalid, select.invalid{
+	border: 2px solid red;
+}
+
+input.valid, select.valid{
+	border: 2px solid green;
+}
