finalisation api sauf jwt

--- a/api/views/ajout.html.twig
+++ b/api/views/ajout.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <h2>Ajout</h2>
 
-    <h3>Add a comment</h3>
+    <h3>Ajouter un membre</h3>
     {{ form_start(MembreForm) }}
     <div class="form-group">
         
