--- a/public/css/main.css
+++ b/public/css/main.css
@@ -238,7 +238,7 @@ ul.social-share li a:hover {
 }
 
 .navbar {
-  border-radius: 0;
+  border-radius: 0!important;
   margin-bottom: 0;
   background: #151515;
   padding: 15px 0;
@@ -1465,14 +1465,14 @@ ul.social_icons li  a i{
 }
 
 .gmap-area .gmap iframe {
-  border-radius: 75%;
+  border-radius: 10%;
   height: 280px;
   width: 300px;
 }
 
 .gmap{
     border: 10px solid #f6f5f0;
-    border-radius: 75%;
+    border-radius: 10%;
     height: 300px;
     width: 300px;
     box-shadow: 0px 0px 3px 3px #e7e4dc;
