--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,12 +12,7 @@ body {
   line-height: 22px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-weight: 600; 
   font-family: 'Open Sans', sans-serif;
   color:#4e4e4e;
@@ -1621,8 +1616,9 @@ shortcodes page css
   margin-left: 15px;
 }
 
-#form-signin .error{
+label.error{
   display: none;
+  color: red;
   margin-left: 10px;
 }
 
